Fix /top command: unify aliases, validate arguments, improve usage messages, dynamic tab completion